<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_animation_text"
        android:gravity="center"
        />
    <com.wm.easytoast.widget.button.RoundButton
        android:id="@+id/toast_default"
        style="@style/button_style"
        android:text="@string/toast_default"
        app:rb_backgroundColor="@color/colorDefault"
        />
    <com.wm.easytoast.widget.button.RoundButton
        android:id="@+id/toast_success"
        style="@style/button_style"
        android:text="@string/toast_success"
        app:rb_backgroundColor="@color/colorSuccess"
        />
    <com.wm.easytoast.widget.button.RoundButton
        android:id="@+id/toast_error"
        style="@style/button_style"
        android:text="@string/toast_error"
        app:rb_backgroundColor="@color/colorError"
        />
    <com.wm.easytoast.widget.button.RoundButton
        android:id="@+id/toast_info"
        style="@style/button_style"
        android:text="@string/toast_info"
        app:rb_backgroundColor="@color/colorInfo"
        />
    <com.wm.easytoast.widget.button.RoundButton
        android:id="@+id/toast_warning"
        style="@style/button_style"
        android:text="@string/toast_warning"
        app:rb_backgroundColor="@color/colorWarning"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_animation_text"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <com.wm.easytoast.widget.button.RoundButton
        android:id="@+id/toast_success_anim"
        style="@style/button_style"
        android:text="@string/toast_success"
        app:rb_backgroundColor="@color/colorSuccess"
        />
    <com.wm.easytoast.widget.button.RoundButton
        android:id="@+id/toast_error_anim"
        style="@style/button_style"
        android:text="@string/toast_error"
        app:rb_backgroundColor="@color/colorError"
        />
    <com.wm.easytoast.widget.button.RoundButton
        android:id="@+id/toast_info_anim"
        style="@style/button_style"
        android:text="@string/toast_info"
        app:rb_backgroundColor="@color/colorInfo"
        />
    <com.wm.easytoast.widget.button.RoundButton
        android:id="@+id/toast_warning_anim"
        style="@style/button_style"
        android:text="@string/toast_warning"
        app:rb_backgroundColor="@color/colorWarning"
        />
    </LinearLayout>
</ScrollView>